feat: fleet page merge, session compare upgrades, NL converter and pipeline fixes
- Fleet: single merged registry + vehicle detail page (tabs, in-place
  catalog/requirement editors, attach modal with system catalog picker)
- Session compare: rule-outcome A/B table, first-divergence column,
  plain-language sentinel values, cross-vehicle notice, fixed API URLs,
  Groq plain-text mode, epoch-relative session support
- NL requirement converter: conditional-invariant support, scope honesty,
  unique rule ids; key_can.xml XML declaration fix
- Charts/replay: bounded Influx scans with full-scan fallback, STOMP
  subscribe-before-stream race fix
- Reports: narrative PDF rework with vehicle identity, duration unit fix,
  per-series span fix in summary duration
- Cleanup: diagnostics page + orphaned KB endpoints removed, sectioned
  sidebar, de-iconified checks/report tabs, catalog bit patterns accept 0
- Plus in-progress m_version branch changes (BMW twin scene, data model
  consolidation, auth/services refactors)